<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextValor1"
        android:layout_width="193dp"
        android:layout_height="29dp"
        android:autoText="false"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="10"
        android:hint="@string/txt_valor1"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <EditText
        android:id="@+id/editTextValor2"
        android:layout_width="193dp"
        android:layout_height="29dp"
        android:layout_marginBottom="52dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="10"
        android:hint="@string/txt_valor2"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/buttonSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="cuenta"
        android:text="@string/buttonSum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <EditText
        android:id="@+id/editTextRes"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextRes"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <Button
        android:id="@+id/ButAcercaDe"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:onClick="AcercaDe"
        android:text="@string/ButtonAcercaDe"
        android:textColorHighlight="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/buttonSalir"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:text="@string/buttonSalir"
        android:onClick="Salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="250dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioSum" />

        <RadioButton
            android:id="@+id/radioRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioRes" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>